--- a/src/html/_filters-head-wallet-manager.html
+++ b/src/html/_filters-head-wallet-manager.html
@@ -1,9 +1,34 @@
 <div class="filters-head">
   <form action="#" class="filters-head__form">
-    <div class="filters-head__row">
+    <div class="filters-head__row filters-head__row--full">
       <div class="filters-head__naming heading">
         <h1 class="filters-head__name heading__title">Wallet&nbsp;Manager</h1>
         <img width="16" height="16" src="./img/icons/Wallet Manager.svg" alt="icon">
+      </div>
+
+      <div class="filters-head__tokens mobile-dn">
+        <ul class="filters-head__tokens-list">
+          <li class="filters-head__tokens-item active">
+            <div class="filters-head__token">
+              <img class="filters-head__token-img" width="20" height="20" src="./img/tokens/binance.svg" alt="binance">
+              <p class="filters-head__token-text">Ethereum</p>
+            </div>
+          </li>
+
+          <li class="filters-head__tokens-item">
+            <div class="filters-head__token">
+              <img class="filters-head__token-img" width="20" height="20" src="./img/tokens/binance.svg" alt="binance">
+              <p class="filters-head__token-text">Ethereum</p>
+            </div>
+          </li>
+
+          <li class="filters-head__tokens-item">
+            <div class="filters-head__token">
+              <img class="filters-head__token-img" width="20" height="20" src="./img/tokens/binance.svg" alt="binance">
+              <p class="filters-head__token-text">Ethereum</p>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </form>
