--- a/src/html/_portfolio-analyzer.html
+++ b/src/html/_portfolio-analyzer.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="tab__contents">
-      <div class="tab__content active" data-tab-content="Main">
+      <div class="tab__content tab__content--absulate active" data-tab-content="Main">
         <div class="tab__items">
           <div class="tab__item tab__item--column tab__item--border">
             <div class="tab__info">
@@ -294,6 +294,7 @@
       </div>
 
       <div class="tab__content" data-tab-content="Profitable">
+        <h4 class="tab__content-label mobile-dn">Most Profitable</h4>
         <div class="table-wrapper  table-wrapper--not-right-border">
           <table class="table">
             <thead>
@@ -432,6 +433,7 @@
       </div>
 
       <div class="tab__content" data-tab-content="Positions">
+        <h4 class="tab__content-label mobile-dn">Active Positions</h4>
         <div class="table-wrapper  table-wrapper--not-right-border">
           <table class="table">
             <thead>
@@ -593,6 +595,7 @@
       </div>
 
       <div class="tab__content" data-tab-content="History">
+        <h4 class="tab__content-label mobile-dn">Trade History</h4>
         <div class="table-wrapper">
           <table class="table">
             <thead>
@@ -604,7 +607,7 @@
                 </th>
                 <th>
                   <div class="table__relative">
-                    <button type="button" class="table__left-btn">
+                    <button type="button" class="table__left-btn desktop-dn">
                       <img width="6" src="./img/icons/left-tringle.svg" alt="left-tringle icon">
                     </button>
                     <div class="table__head">
@@ -620,6 +623,18 @@
                 <th>
                   <div class="table__head">
                     <p>Amt</p>
+                  </div>
+                </th>
+
+                <th class="mobile-dn">
+                  <div class="table__head">
+                    <p>Total</p>
+                  </div>
+                </th>
+
+                <th class="mobile-dn">
+                  <div class="table__head">
+                    <p>Maker</p>
                   </div>
                 </th>
               </tr>
@@ -649,6 +664,18 @@
                     <p class="table__bold-text">49.0056</p>
                   </div>
                 </td>
+
+                <td class="mobile-dn">
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
+
+                <td class="mobile-dn">
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
               </tr>
 
               <tr>
@@ -671,6 +698,18 @@
                   </div>
                 </td>
                 <td>
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
+
+                <td class="mobile-dn">
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
+
+                <td class="mobile-dn">
                   <div class="table__column-direction">
                     <p class="table__bold-text">49.0056</p>
                   </div>
@@ -701,6 +740,18 @@
                     <p class="table__bold-text">49.0056</p>
                   </div>
                 </td>
+
+                <td class="mobile-dn">
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
+
+                <td class="mobile-dn">
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
               </tr>
 
               <tr>
@@ -727,8 +778,19 @@
                     <p class="table__bold-text">49.0056</p>
                   </div>
                 </td>
-              </tr>
 
+                <td class="mobile-dn">
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
+
+                <td class="mobile-dn">
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
+              </tr>
 
               <tr>
                 <td colspan="2">
@@ -754,6 +816,18 @@
                     <p class="table__bold-text">49.0056</p>
                   </div>
                 </td>
+
+                <td class="mobile-dn">
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
+
+                <td class="mobile-dn">
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
               </tr>
 
               <tr>
@@ -780,8 +854,19 @@
                     <p class="table__bold-text">49.0056</p>
                   </div>
                 </td>
-              </tr>
 
+                <td class="mobile-dn">
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
+
+                <td class="mobile-dn">
+                  <div class="table__column-direction">
+                    <p class="table__bold-text">49.0056</p>
+                  </div>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
