--- a/src/referrals.html
+++ b/src/referrals.html
@@ -11,8 +11,11 @@
 
 <body class="main__body">
   <div class="wrapper bg">
-    <!-- Header -->
-    @@include('./html/_header-search.html')
+    <div class="desktop-dn">
+      <!-- Header -->
+      @@include('./html/_header-search.html')
+    </div>
+
 
     <!-- Main Page -->
     <main>
