added new disigne and fixes

--- a/src/html/_filters-head-portfolio-analyzer.html
+++ b/src/html/_filters-head-portfolio-analyzer.html
@@ -1,12 +1,12 @@
 <div class="filters-head">
-  <form action="#" class="filters-head__form">
+  <form action="#" class="filters-head__form filters-head__form--mb ">
     <div class="filters-head__row filters-head__row--full">
       <div class="filters-head__naming heading">
         <h1 class="filters-head__name heading__title">Portfolio&nbsp;Analyzer</h1>
-        <img width="16" height="16" src="./img/icons/Portfolio Analyzer.svg" alt="icon">
+        <img width="20" height="20" src="./img/icons/Portfolio Analyzer.svg" alt="icon">
       </div>
 
-      <div class="filters-head__actions">
+      <div class="filters-head__actions filters-head__actions--flex-end">
         <div class="filters-head__action">
           <button type="button" class="filters-head__action-btn"><span>Filters</span></button>
         </div>
