--- a/src/html/_filters-head-pump-vision.html
+++ b/src/html/_filters-head-pump-vision.html
@@ -1,5 +1,5 @@
 <div class="filters-head">
-  <form action="#" class="filters-head__form">
+  <form action="#" class="filters-head__form filters-head__form--reverse">
     <div class="filters-head__row">
       <div class="filters-head__icons desktop-dn">
         <!-- если добавить класс active то иконка покраситься -->
@@ -25,7 +25,7 @@
     <div class="filters-head__row filters-head__row--full">
       <div class="filters-head__naming heading">
         <h1 class="filters-head__name heading__title">Pump Vision</h1>
-        <img width="16" height="16" src="./img/icons/Pump Vision.svg" alt="icon">
+        <img width="20" height="20" src="./img/icons/Pump Vision.svg" alt="icon">
       </div>
 
       <div class="filters-head__input-wrapper">
