--- a/src/html/_filters-head-wallet-manager.html
+++ b/src/html/_filters-head-wallet-manager.html
@@ -1,9 +1,9 @@
 <div class="filters-head">
-  <form action="#" class="filters-head__form">
+  <form action="#" class="filters-head__form filters-head__form--mb">
     <div class="filters-head__row filters-head__row--full">
       <div class="filters-head__naming heading">
         <h1 class="filters-head__name heading__title">Wallet&nbsp;Manager</h1>
-        <img width="16" height="16" src="./img/icons/Wallet Manager.svg" alt="icon">
+        <img width="20" height="20" src="./img/icons/Wallet Manager.svg" alt="icon">
       </div>
 
       <div class="filters-head__tokens mobile-dn">
