--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -3,15 +3,31 @@
     <ul class="footer__list">
       <li class="footer__item active">
         <a class="footer__link" href="#">
-          <img class="footer__link-img" width="20" height="20" src="./img/footer/deposit.svg" alt="Deposit icon">
+          <img class="footer__link-img" width="22" src="./img/footer/main.svg" alt="Main icon">
 
-          <p class="footer__link-text">Deposit</p>
+          <p class="footer__link-text">Main</p>
         </a>
       </li>
 
       <li class="footer__item">
         <a class="footer__link" href="#">
-          <img class="footer__link-img" width="20" height="20" src="./img/footer/referrals.svg" alt="Referrals icon">
+          <img class="footer__link-img" width="21" src="./img/footer/explore.svg" alt="Explore icon">
+
+          <p class="footer__link-text">Explore</p>
+        </a>
+      </li>
+
+      <li class="footer__item">
+        <a class="footer__link" href="#">
+          <img class="footer__link-img" width="20" src="./img/footer/sniper.svg" alt="Sniper icon">
+
+          <p class="footer__link-text">Sniper</p>
+        </a>
+      </li>
+
+      <li class="footer__item">
+        <a class="footer__link" href="#">
+          <img class="footer__link-img" width="20" src="./img/footer/referrals.svg" alt="Referrals icon">
 
           <p class="footer__link-text">Referrals</p>
         </a>
@@ -19,25 +35,9 @@
 
       <li class="footer__item">
         <a class="footer__link" href="#">
-          <img class="footer__link-img" width="20" height="20" src="./img/footer/support.svg" alt="Support icon">
+          <img class="footer__link-img" width="20" src="./img/footer/wallet.svg" alt="Wallet icon">
 
-          <p class="footer__link-text">Support</p>
-        </a>
-      </li>
-
-      <li class="footer__item">
-        <a class="footer__link" href="#">
-          <img class="footer__link-img" width="20" height="20" src="./img/footer/protfolio.svg" alt="Protfolio icon">
-
-          <p class="footer__link-text">Protfolio</p>
-        </a>
-      </li>
-
-      <li class="footer__item">
-        <a class="footer__link" href="#">
-          <img class="footer__link-img" width="20" height="20" src="./img/footer/sniper.svg" alt="Sniper icon">
-
-          <p class="footer__link-text">Sniper</p>
+          <p class="footer__link-text">Wallet</p>
         </a>
       </li>
     </ul>
