--- a/src/html/_terminal.html
+++ b/src/html/_terminal.html
@@ -1,7 +1,7 @@
-<div class="terminal portfolio-analyzer">
-  <div class="terminal__graphik terminal__graphik--desktop  mobile-dn">
+<div class="terminal">
+  <!-- <div class="terminal__graphik terminal__graphik--desktop  mobile-dn">
     <img class="terminal__graphik-img" src="./img/terminal-graphik.png" alt="terminal graphik">
-  </div>
+  </div> -->
 
   <form class="terminal__form terminal__form--desktop mobile-dn" action="#">
     <div class="heading">
@@ -139,8 +139,8 @@
   <div class="tab">
     <div class="tab__head">
       <div class="tab__btns">
-        <button type="button" class="tab__btn desktop-dn" data-tab-btn="Main">Main</button>
-        <button type="button" class="tab__btn active" data-tab-btn="Trades">Trades</button>
+        <button type="button" class="tab__btn active" data-tab-btn="Main">Main</button>
+        <button type="button" class="tab__btn" data-tab-btn="Trades">Trades</button>
         <button type="button" class="tab__btn" data-tab-btn="Orders">Orders</button>
         <button type="button" class="tab__btn" data-tab-btn="Holders">Holders (23)</button>
         <button type="button" class="tab__btn" data-tab-btn="Positions">Positions</button>
@@ -149,7 +149,7 @@
     </div>
 
     <div class="tab__contents">
-      <div class="tab__content tab__content--desktop-dn" data-tab-content="Main">
+      <div class="tab__content active" data-tab-content="Main">
         <div class="terminal__blocks desktop-dn">
           <div class="terminal__block">
             <p class="terminal__block-text">Price</p>
@@ -269,7 +269,7 @@
         </form>
       </div>
 
-      <div class="tab__content active" data-tab-content="Trades">
+      <div class="tab__content" data-tab-content="Trades">
         <div class="table-wrapper table-wrapper--not-right-border ">
           <table class="table">
             <thead>
