--- a/src/html/_aside.html
+++ b/src/html/_aside.html
@@ -8,6 +8,30 @@
       <a class="logo" href="#"><img class="log__img" width="92" src="./img/logo.svg" alt="logo"></a>
     </div>
 
+    <div class="nav__filters">
+      <div class="filters-head__actions">
+        <div class="filters-head__balance">
+          <p class="filters-head__balance-text">Balance</p>
+          <p class="filters-head__balance-sum">$6K</p>
+        </div>
+        <div class="filters-head__action">
+          <button type="button"
+            class="filters-head__action-btn filters-head__action-btn--not-border filters-head__action-btn--large active">
+            <img width="16" src="./img/icons/deposit-icon.svg" alt="icon">
+            <span>Deposit</span>
+          </button>
+        </div>
+
+        <div class="filters-head__action">
+          <button type="button"
+            class="filters-head__action-btn filters-head__action-btn--not-border filters-head__action-btn--large filters-head__action-btn--white">
+            <img width="22" src="./img/icons/wallet-icon.svg" alt="icon">
+            <span>Wallet</span>
+          </button>
+        </div>
+      </div>
+    </div>
+
     <div class="aside__main">
       <nav class="nav aside-nav">
         <ul class="nav__list">
@@ -82,18 +106,6 @@
               <img class="nav__link-arrow" src="./img/icons/nav-arrow.svg" alt="arrow icon">
             </a>
           </li>
-
-          <li class="nav__item">
-            <a class="nav__link" href="#">
-              <div class="nav__link-icon">
-                <img src="./img/icons/nav-7.svg" width="20" height="20" alt="icon">
-              </div>
-
-              <p class="nav__link-text">Wallet Manager</p>
-
-              <img class="nav__link-arrow" src="./img/icons/nav-arrow.svg" alt="arrow icon">
-            </a>
-          </li>
         </ul>
 
         <div class="nav__border"></div>
@@ -102,7 +114,7 @@
           <li class="nav__item">
             <a class="nav__link" href="#">
               <div class="nav__link-icon">
-                <img src="./img/icons/settings.svg" width="20" height="20" alt="icon">
+                <img src="./img/icons/nav-7.svg" width="20" height="20" alt="icon">
               </div>
 
               <p class="nav__link-text">Settings</p>
@@ -125,32 +137,14 @@
     </div>
 
 
-    <div class="nav__filters">
-      <div class="filters-head__actions">
-        <div class="filters-head__balance">
-          <p class="filters-head__balance-text">Balance</p>
-          <p class="filters-head__balance-sum">$6K</p>
-        </div>
-        <div class="filters-head__action">
-          <button type="button"
-            class="filters-head__action-btn filters-head__action-btn--not-border filters-head__action-btn--large active"><span>Deposit</span>
-            <img width="12" height="12" src="./img/icons/deposit-icon.svg" alt="icon"></button>
-        </div>
 
-        <div class="filters-head__action">
-          <button type="button"
-            class="filters-head__action-btn filters-head__action-btn--not-border filters-head__action-btn--large "><span>Wallet</span>
-            <img width="12" height="12" src="./img/icons/wallet-icon.svg" alt="icon"></button>
-        </div>
-      </div>
-    </div>
 
     <div class="aside__footer">
       <a class="aside__banner" href="#">
         <h3 class="aside__banner-label">sniper function</h3>
 
         <div class="aside__banner-picture">
-          <img width="84" height="84" src="./img/aside-banner-pic.png" alt=" sniper function pic">
+          <img width="48" src="./img/aside-banner-pic.png" alt=" sniper function pic">
         </div>
       </a>
     </div>
