--- a/src/html/_filters-head-terminal.html
+++ b/src/html/_filters-head-terminal.html
@@ -1,5 +1,5 @@
 <div class="filters-head filters-head--terminal">
-  <form action="#" class="filters-head__form">
+  <form action="#" class="filters-head__form filters-head__form--mb">
     <div class="filters-head__row filters-head__row--full">
       <div class="table__info table__row-direction">
         <div class="table__info-token">
